--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -64,6 +64,7 @@
 		font-weight: _font(weight-heading);
 		line-height: 1.5;
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
+		font-variant: small-caps; // Add small caps here
 
 		a {
 			color: inherit;
