--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -9,7 +9,7 @@
 	#header {
 		@include vendor('display', 'flex');
 		border-bottom: solid 5px _palette(accent);
-		padding: 6em 0 1em 0;
+		/*padding: 6em 0 1em 0;*/
 		position: relative;
 
 		> * {
@@ -22,15 +22,16 @@
 			color: inherit;
 			font-family: _font(family-heading);
 			font-size: 1.125em;
+			text-align: center;
 		}
 
 		.icons {
 			text-align: right;
 		}
 
-		@include breakpoint('<=xlarge') {
+		/*@include breakpoint('<=xlarge') {
 			padding-top: 5em;
-		}
+		}*/
 
 		@include breakpoint('<=small') {
 			padding-top: 6.5em;
@@ -48,4 +49,12 @@
 				top: 0;
 			}
 		}
+	}
+
+	.social-icons {
+		padding-top: 1.5rem;
+		display: flex;
+		justify-content: right;
+		color: #D8DEE9; /* Snow Storm */
+		margin-bottom: 0px;
 	}
