--- a/assets/sass/layout/_sidebar.scss
+++ b/assets/sass/layout/_sidebar.scss
@@ -85,7 +85,7 @@
 		.toggle {
 			@include icon(false, solid);
 			@include vendor('transition', 'left 0.5s ease');
-			-webkit-tap-highlight-color: rgba(255,255,255,0);
+			-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 			border: 0;
 			display: block;
 			height: 7.5em;
@@ -100,7 +100,8 @@
 			top: 0;
 			width: 6em;
 			z-index: _misc(z-index-base);
-
+			color: _palette(fg); // Set default color to foreground
+	
 			&:before {
 				content: '\f0c9';
 				font-size: 2rem;
@@ -111,6 +112,10 @@
 				text-indent: 0;
 				top: 0;
 				width: inherit;
+			}
+	
+			&:hover {
+				color: _palette(accent); // Change color to accent on hover
 			}
 		}
 
@@ -199,17 +204,18 @@
 			.toggle {
 				text-indent: 7.25em;
 				width: 7.25em;
-
+				color: _palette(fg); // Set default color to foreground
+		
 				&:before {
-					color: _palette(fg);
 					margin-left: (-0.125em / 2);
 					margin-top: (-0.5em / 2);
 					font-size: 1.1rem;
 					z-index: 1;
 				}
-
+		
 				&:after {
-					background: transparentize(lighten(_palette(fg), 35), 0.25);
+					// Remove or adjust this if it conflicts with the design
+					// background: transparentize(lighten(_palette(fg), 35), 0.25);
 					border-radius: _size(border-radius);
 					content: '';
 					height: 3.5em;
@@ -217,6 +223,10 @@
 					position: absolute;
 					top: 1em;
 					width: 5em;
+				}
+		
+				&:hover {
+					color: _palette(accent); // Change color to accent on hover
 				}
 			}
 		}
