--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -55,6 +55,7 @@
 
 	@import 'layout/wrapper';
 	@import 'layout/main';
+	@import "layout/propertymodal";
 	@import 'layout/sidebar';
 	@import 'layout/header';
 	@import 'layout/banner';
