--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2504,6 +2504,72 @@ button.sidebar-button {
   }
 }
 
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  border: 1px solid rgba(52, 58, 64, 0.1);
+  box-shadow: 0 4px 8px rgba(52, 58, 64, 0.1);
+  z-index: 10000;
+  display: none;
+  overflow: auto;
+  width: 768px;
+  max-width: 80%;
+  height: auto;
+  max-height: 80%;
+  padding: 3em;
+}
+.modal .modal-content {
+  padding: 3em;
+  position: relative;
+}
+.modal .modal-content .close {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 24px;
+  font-weight: bold;
+  cursor: pointer;
+  color: #343a40;
+}
+.modal .modal-content .large-image {
+  width: 100%;
+  height: auto;
+  display: block;
+  margin-bottom: 2em;
+}
+.modal .modal-content .carousel {
+  display: flex;
+  overflow-x: auto;
+  margin-bottom: 2em;
+}
+.modal .modal-content .carousel .carousel-image {
+  max-width: 100px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+.modal .modal-content .carousel .carousel-image:last-child {
+  margin-right: 0;
+}
+.modal .modal-content p {
+  color: #343a40;
+  font-family: "Work Sans", sans-serif;
+}
+
+@media (max-width: 600px) {
+  .modal {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    top: 0;
+    left: 0;
+    transform: none;
+    padding: 0;
+  }
+}
 /* Sidebar */
 #search form {
   text-decoration: none;
