--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2540,6 +2540,13 @@ button.sidebar-button {
   display: block;
   margin-bottom: 2em;
 }
+.modal .modal-content .price {
+  text-transform: uppercase;
+  font-size: 1.25em;
+  color: #343a40;
+  font-weight: bold;
+  padding-top: 1em;
+}
 .modal .modal-content .carousel {
   display: flex;
   overflow-x: auto;
