--- a/assets/sass/layout/_propertymodal.scss
+++ b/assets/sass/layout/_propertymodal.scss
@@ -1,3 +1,8 @@
+.blur-background {
+    filter: blur(8px);
+    pointer-events: none; /* Disables interaction with the background */
+}
+
 .modal {
   position: fixed;
   top: 50%;
