nord, just for fun

--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -40,7 +40,7 @@ $font: (
   kerning-heading: 0.075em, // Slight kerning to improve spacing in headings
 );
 
-/*// Nord Palette.
+// Nord Palette.
 $palette: (
   bg: #2E3440,           // Polar Night (Background)
   bg-alt: #3B4252,       // Slightly lighter Polar Night for alt sections
@@ -51,7 +51,7 @@ $palette: (
   border-bg: transparentize(#D8DEE9, 0.75), // Semi-transparent Snow Storm for background borders
   accent: #88C0D0,       // Frost (Accent)
   secondary-accent: #81A1C1  // Aurora (Secondary Accent)
-);*/
+);/*
 // Dracula Palette.
 /*$palette: (
   bg: #282a36,
@@ -62,7 +62,7 @@ $palette: (
   border: rgba(68, 71, 90, 0.75),
   border-bg: transparentize(#44475a, 0.75),
   accent: #ff79c6
-);*/
+);
 $palette: (
   bg: #ffffff, // White background for a clean look
   bg-alt: #f8f9fa, // Very light gray for alternate sections
@@ -73,5 +73,5 @@ $palette: (
   border-bg: rgba(52, 58, 64, 0.05), // Very light border background
   accent: #fd7e14 // Vibrant orange for accent elements
 );
-
+*/
 
