--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -41,15 +41,15 @@ $font: (
 );
 
 $palette: (
-  bg: #2B2D3E,
-  bg-alt: #44485D,
-  fg: #D8E0E8,
-  fg-bold: #FF6B6B,
-  fg-light: #A9B3C2,
-  border: rgba(216, 224, 232, 0.75),
-  border-bg: transparentize(#D8E0E8, 0.75),
-  accent: #FF8484,
-  secondary-accent: #FFABAB
+  bg: #272228,
+  bg-alt: #423A30,
+  fg: #D9D2C9,
+  fg-bold: #E1B53F,
+  fg-light: #B3A79C,
+  border: rgba(217, 210, 201, 0.75),
+  border-bg: transparentize(#D9D2C9, 0.75),
+  accent: #FFD552,
+  secondary-accent: #FFAB53
 );
 /*
 // Dracula Palette.
