--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,7 +116,7 @@ html {
 }
 
 body {
-  background: #2B2D3E;
+  background: #272228;
 }
 body.is-preload *, body.is-preload *:before, body.is-preload *:after, body.is-resizing *, body.is-resizing *:before, body.is-resizing *:after {
   -moz-animation: none !important;
@@ -131,7 +131,7 @@ body.is-preload *, body.is-preload *:before, body.is-preload *:after, body.is-re
 
 /* Type */
 body, input, select, textarea {
-  color: #D8E0E8;
+  color: #D9D2C9;
   font-family: "Work Sans", sans-serif;
   font-size: 13pt;
   font-weight: 400;
@@ -159,19 +159,19 @@ a {
   -ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
   border-bottom: dotted 1px;
-  color: #FF8484;
+  color: #FFD552;
   text-decoration: none;
 }
 a:hover {
-  border-bottom-color: #FF8484;
-  color: #FF8484 !important;
+  border-bottom-color: #FFD552;
+  color: #FFD552 !important;
 }
 a:hover strong {
   color: inherit;
 }
 
 strong, b {
-  color: #FF6B6B;
+  color: #E1B53F;
   font-weight: 600;
 }
 
@@ -184,7 +184,7 @@ p {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #FF6B6B;
+  color: #E1B53F;
   font-family: "Work Sans", sans-serif;
   font-weight: 700;
   line-height: 1.5;
@@ -255,16 +255,16 @@ sup {
 }
 
 blockquote {
-  border-left: solid 3px rgba(216, 224, 232, 0.75);
+  border-left: solid 3px rgba(217, 210, 201, 0.75);
   font-style: italic;
   margin: 0 0 2em 0;
   padding: 0.5em 0 0.5em 2em;
 }
 
 code {
-  background: rgba(216, 224, 232, 0.25);
+  background: rgba(217, 210, 201, 0.25);
   border-radius: 0.375em;
-  border: solid 1px rgba(216, 224, 232, 0.75);
+  border: solid 1px rgba(217, 210, 201, 0.75);
   font-family: "Fira Code", monospace;
   font-size: 0.9em;
   margin: 0 0.25em;
@@ -286,7 +286,7 @@ pre code {
 
 hr {
   border: 0;
-  border-bottom: solid 1px rgba(216, 224, 232, 0.75);
+  border-bottom: solid 1px rgba(217, 210, 201, 0.75);
   margin: 2em 0;
 }
 hr.major {
@@ -1429,7 +1429,7 @@ header p {
   text-transform: uppercase;
 }
 header.major > :last-child {
-  border-bottom: solid 3px #FF8484;
+  border-bottom: solid 3px #FFD552;
   display: inline-block;
   margin: 0 0 2em 0;
   padding: 0 0.75em 0.5em 0;
@@ -1457,7 +1457,7 @@ form {
   display: contents;
 }
 .form-group label {
-  color: #FF6B6B;
+  color: #E1B53F;
   font-size: 0.9em;
   font-weight: 600;
   margin: 0;
@@ -1474,10 +1474,10 @@ form {
   -webkit-appearance: none;
   -ms-appearance: none;
   appearance: none;
-  background: #2B2D3E;
+  background: #272228;
   border-radius: 0.375em;
   border: none;
-  border: solid 1px rgba(216, 224, 232, 0.75);
+  border: solid 1px rgba(217, 210, 201, 0.75);
   color: inherit;
   display: block;
   outline: 0;
@@ -1496,8 +1496,8 @@ form {
 .form-group input[type=email]:focus,
 .form-group input[type=tel]:focus,
 .form-group textarea:focus {
-  border-color: #FF8484;
-  box-shadow: 0 0 0 1px #FF8484;
+  border-color: #FFD552;
+  box-shadow: 0 0 0 1px #FFD552;
 }
 .form-group textarea {
   padding: 0.5em 10px; /* Reduce padding */
@@ -1517,8 +1517,8 @@ form {
 }
 
 input[type=submit] {
-  background-color: #FF8484;
-  color: #2B2D3E !important;
+  background-color: #FFD552;
+  color: #272228 !important;
   border: none;
   border-radius: 0.375em;
   cursor: pointer;
@@ -1537,32 +1537,32 @@ input[type=submit] {
   align-self: center; /* Center the submit button */
 }
 input[type=submit]:hover {
-  background-color: #2B2D3E;
-  color: #FF8484 !important;
-  box-shadow: inset 0 0 0 2px #FF8484;
+  background-color: #272228;
+  color: #FFD552 !important;
+  box-shadow: inset 0 0 0 2px #FFD552;
 }
 input[type=submit]:active {
-  background-color: rgba(255, 132, 132, 0.15);
+  background-color: rgba(255, 213, 82, 0.15);
 }
 
 /* Adjust placeholders */
 ::-webkit-input-placeholder {
-  color: #A9B3C2 !important;
+  color: #B3A79C !important;
   opacity: 1;
 }
 
 :-moz-placeholder {
-  color: #A9B3C2 !important;
+  color: #B3A79C !important;
   opacity: 1;
 }
 
 ::-moz-placeholder {
-  color: #A9B3C2 !important;
+  color: #B3A79C !important;
   opacity: 1;
 }
 
 :-ms-input-placeholder {
-  color: #A9B3C2 !important;
+  color: #B3A79C !important;
   opacity: 1;
 }
 
@@ -1595,7 +1595,7 @@ input[type=submit]:active {
 /* Box */
 .box {
   border-radius: 0.375em;
-  border: solid 1px rgba(216, 224, 232, 0.75);
+  border: solid 1px rgba(217, 210, 201, 0.75);
   margin-bottom: 2em;
   padding: 1.5em;
 }
@@ -1724,7 +1724,7 @@ ul.alt {
   padding-left: 0;
 }
 ul.alt li {
-  border-top: solid 1px rgba(216, 224, 232, 0.75);
+  border-top: solid 1px rgba(217, 210, 201, 0.75);
   padding: 0.5em 0;
 }
 ul.alt li:first-child {
@@ -1831,7 +1831,7 @@ ul.contact {
 }
 ul.contact li {
   text-decoration: none;
-  border-top: solid 1px rgba(216, 224, 232, 0.75);
+  border-top: solid 1px rgba(217, 210, 201, 0.75);
   margin: 1.5em 0 0 0;
   padding: 1.5em 0 0 3em;
   position: relative;
@@ -1849,7 +1849,7 @@ ul.contact li:before {
   font-weight: 400;
 }
 ul.contact li:before {
-  color: #FF8484;
+  color: #FFD552;
   display: inline-block;
   font-size: 1.5em;
   height: 1.125em;
@@ -1901,14 +1901,14 @@ ul.pagination li > .page {
   text-align: center;
 }
 ul.pagination li > .page.active {
-  background-color: #FF8484;
-  color: #2B2D3E !important;
+  background-color: #FFD552;
+  color: #272228 !important;
 }
 ul.pagination li > .page.active:hover {
-  background-color: #ff9393;
+  background-color: #ffd961;
 }
 ul.pagination li > .page.active:active {
-  background-color: #ff7575;
+  background-color: #ffd143;
 }
 ul.pagination li:first-child {
   padding-right: 0.75em;
@@ -1936,34 +1936,34 @@ table {
   width: 100%;
 }
 table tbody tr {
-  border: solid 1px rgba(216, 224, 232, 0.75);
+  border: solid 1px rgba(217, 210, 201, 0.75);
   border-left: 0;
   border-right: 0;
 }
 table tbody tr:nth-child(2n+1) {
-  background-color: rgba(216, 224, 232, 0.25);
+  background-color: rgba(217, 210, 201, 0.25);
 }
 table td {
   padding: 0.75em 0.75em;
 }
 table th {
-  color: #FF6B6B;
+  color: #E1B53F;
   font-size: 0.9em;
   font-weight: 600;
   padding: 0 0.75em 0.75em 0.75em;
   text-align: left;
 }
 table thead {
-  border-bottom: solid 2px rgba(216, 224, 232, 0.75);
+  border-bottom: solid 2px rgba(217, 210, 201, 0.75);
 }
 table tfoot {
-  border-top: solid 2px rgba(216, 224, 232, 0.75);
+  border-top: solid 2px rgba(217, 210, 201, 0.75);
 }
 table.alt {
   border-collapse: separate;
 }
 table.alt tbody tr td {
-  border: solid 1px rgba(216, 224, 232, 0.75);
+  border: solid 1px rgba(217, 210, 201, 0.75);
   border-left-width: 0;
   border-top-width: 0;
 }
@@ -1997,8 +1997,8 @@ button,
   background-color: transparent;
   border-radius: 0.375em;
   border: 0;
-  box-shadow: inset 0 0 0 2px #FF8484;
-  color: #FF8484 !important;
+  box-shadow: inset 0 0 0 2px #FFD552;
+  color: #FFD552 !important;
   cursor: pointer;
   display: inline-block;
   font-family: "Work Sans", sans-serif;
@@ -2020,15 +2020,15 @@ input[type=reset]:hover,
 input[type=button]:hover,
 button:hover,
 .button:hover {
-  background-color: #FF8484;
-  color: #2B2D3E !important;
+  background-color: #FFD552;
+  color: #272228 !important;
 }
 input[type=submit]:active,
 input[type=reset]:active,
 input[type=button]:active,
 button:active,
 .button:active {
-  background-color: rgba(255, 132, 132, 0.15);
+  background-color: rgba(255, 213, 82, 0.15);
 }
 input[type=submit].icon:before,
 input[type=reset].icon:before,
@@ -2065,24 +2065,24 @@ input[type=reset].primary,
 input[type=button].primary,
 button.primary,
 .button.primary {
-  background-color: #FF8484;
+  background-color: #FFD552;
   box-shadow: none;
-  color: #2B2D3E !important;
+  color: #272228 !important;
 }
 input[type=submit].primary:hover,
 input[type=reset].primary:hover,
 input[type=button].primary:hover,
 button.primary:hover,
 .button.primary:hover {
-  background-color: #2B2D3E;
-  color: #FF8484 !important;
+  background-color: #272228;
+  color: #FFD552 !important;
 }
 input[type=submit].primary:active,
 input[type=reset].primary:active,
 input[type=button].primary:active,
 button.primary:active,
 .button.primary:active {
-  background-color: #ff7575;
+  background-color: #ffd143;
 }
 input[type=submit].disabled, input[type=submit]:disabled,
 input[type=reset].disabled,
@@ -2128,7 +2128,7 @@ button.sidebar-button {
 
 /* Mini Posts */
 .mini-posts article {
-  border-top: solid 1px rgba(216, 224, 232, 0.75);
+  border-top: solid 1px rgba(217, 210, 201, 0.75);
   margin-top: 2em;
   padding-top: 2em;
 }
@@ -2198,7 +2198,7 @@ button.sidebar-button {
   width: 10em;
 }
 .features article .icon:before {
-  color: #FF8484;
+  color: #FFD552;
   font-size: 2.75rem;
   position: relative;
   top: 0.05em;
@@ -2209,7 +2209,7 @@ button.sidebar-button {
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
   border-radius: 0.25rem;
-  border: solid 2px rgba(216, 224, 232, 0.75);
+  border: solid 2px rgba(217, 210, 201, 0.75);
   content: "";
   display: block;
   height: 7em;
@@ -2327,7 +2327,7 @@ button.sidebar-button {
   width: calc(33.3333333333% - 6em);
 }
 .posts article:before {
-  background: rgba(216, 224, 232, 0.75);
+  background: rgba(217, 210, 201, 0.75);
   content: "";
   display: block;
   height: calc(100% + 6em);
@@ -2337,7 +2337,7 @@ button.sidebar-button {
   width: 1px;
 }
 .posts article:after {
-  background: rgba(216, 224, 232, 0.75);
+  background: rgba(217, 210, 201, 0.75);
   bottom: -3em;
   content: "";
   display: block;
@@ -2475,7 +2475,7 @@ button.sidebar-button {
 }
 #main > .inner > section {
   padding: 6em 0 4em 0;
-  border-top: solid 2px rgba(216, 224, 232, 0.75);
+  border-top: solid 2px rgba(217, 210, 201, 0.75);
 }
 #main > .inner > section:first-of-type {
   border-top: 0 !important;
@@ -2515,8 +2515,8 @@ button.sidebar-button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: #2B2D3E;
-  border: 3px solid #FF8484;
+  background-color: #272228;
+  border: 3px solid #FFD552;
   border-radius: 15px;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
   z-index: 10000;
@@ -2540,11 +2540,11 @@ button.sidebar-button {
   font-size: 24px;
   font-weight: bold;
   cursor: pointer;
-  color: #D8E0E8;
+  color: #D9D2C9;
   transition: color 0.3s ease;
 }
 .modal .modal-content .close:hover {
-  color: #FF8484;
+  color: #FFD552;
 }
 .modal .modal-content .large-image {
   width: 100%;
@@ -2556,7 +2556,7 @@ button.sidebar-button {
 .modal .modal-content .price {
   text-transform: uppercase;
   font-size: 1.25em;
-  color: #FF8484;
+  color: #FFD552;
   font-weight: bold;
   padding-top: 1em;
 }
@@ -2565,19 +2565,19 @@ button.sidebar-button {
   overflow-x: auto;
   overflow-y: hidden;
   scrollbar-width: thick;
-  scrollbar-color: #FF8484 #2B2D3E;
+  scrollbar-color: #FFD552 #272228;
   margin-bottom: 2em;
   padding: 10px 0;
   position: relative;
 }
 .modal .modal-content .carousel::-webkit-scrollbar {
   height: 8px;
-  background: #2B2D3E;
+  background: #272228;
 }
 .modal .modal-content .carousel::-webkit-scrollbar-thumb {
-  background-color: #FF8484;
+  background-color: #FFD552;
   border-radius: 10px;
-  border: 2px solid #2B2D3E;
+  border: 2px solid #272228;
 }
 .modal .modal-content .carousel .carousel-image {
   max-width: 100px;
@@ -2592,7 +2592,7 @@ button.sidebar-button {
   opacity: 0.8;
 }
 .modal .modal-content p {
-  color: #D8E0E8;
+  color: #D9D2C9;
   font-family: "Work Sans", sans-serif;
 }
 
@@ -2631,7 +2631,7 @@ button.sidebar-button {
   -webkit-transform: scaleX(-1);
   -ms-transform: scaleX(-1);
   transform: scaleX(-1);
-  color: #D8E0E8;
+  color: #D9D2C9;
   content: "\f002";
   cursor: default;
   display: block;
@@ -2662,7 +2662,7 @@ button.sidebar-button {
   -webkit-transition: margin-left 0.5s ease, box-shadow 0.5s ease;
   -ms-transition: margin-left 0.5s ease, box-shadow 0.5s ease;
   transition: margin-left 0.5s ease, box-shadow 0.5s ease;
-  background-color: #44485D;
+  background-color: #423A30;
   font-size: 0.9em;
   position: relative;
   width: 26em;
@@ -2676,7 +2676,7 @@ button.sidebar-button {
   width: 26em;
 }
 #sidebar > .inner > * {
-  border-bottom: solid 2px rgba(216, 224, 232, 0.75);
+  border-bottom: solid 2px rgba(217, 210, 201, 0.75);
   margin: 0 0 3.5em 0;
   padding: 0 0 3.5em 0;
 }
@@ -2689,7 +2689,7 @@ button.sidebar-button {
   padding-bottom: 0;
 }
 #sidebar > .inner > .alt {
-  background-color: #404357;
+  background-color: #3c352c;
   border-bottom: 0;
   margin: -2.2222222222em 0 4.4444444444em -2.2222222222em;
   padding: 2.2222222222em;
@@ -2716,7 +2716,7 @@ button.sidebar-button {
   top: 0;
   width: 6em;
   z-index: 10000;
-  color: #D8E0E8;
+  color: #D9D2C9;
 }
 #sidebar .toggle:before {
   -moz-osx-font-smoothing: grayscale;
@@ -2742,7 +2742,7 @@ button.sidebar-button {
   width: inherit;
 }
 #sidebar .toggle:hover {
-  color: #FF8484;
+  color: #FFD552;
 }
 #sidebar.inactive {
   margin-left: -26em;
@@ -2817,7 +2817,7 @@ button.sidebar-button {
   #sidebar .toggle {
     text-indent: 7.25em;
     width: 7.25em;
-    color: #D8E0E8;
+    color: #D9D2C9;
   }
   #sidebar .toggle:before {
     margin-left: -0.0625em;
@@ -2835,7 +2835,7 @@ button.sidebar-button {
     width: 5em;
   }
   #sidebar .toggle:hover {
-    color: #FF8484;
+    color: #FFD552;
   }
 }
 
@@ -2845,7 +2845,7 @@ button.sidebar-button {
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
-  border-bottom: solid 5px #FF8484;
+  border-bottom: solid 5px #FFD552;
   /*padding: 6em 0 1em 0;*/
   position: relative;
   /*@include breakpoint('<=xlarge') {
@@ -2987,7 +2987,7 @@ button.sidebar-button {
 
 /* Footer */
 #footer .copyright {
-  color: #A9B3C2;
+  color: #B3A79C;
   font-size: 0.9em;
 }
 #footer .copyright a {
@@ -3000,7 +3000,7 @@ button.sidebar-button {
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  color: #FF6B6B;
+  color: #E1B53F;
   font-family: "Work Sans", sans-serif;
   font-weight: 400;
   letter-spacing: 0.075em;
@@ -3018,7 +3018,7 @@ button.sidebar-button {
   padding: 0.625em 0;
 }
 #menu ul a:hover, #menu ul span:hover {
-  color: #FF8484;
+  color: #FFD552;
 }
 #menu ul a.opener, #menu ul span.opener {
   -moz-transition: color 0.2s ease-in-out;
@@ -3046,13 +3046,13 @@ button.sidebar-button {
   -webkit-transition: color 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
   -ms-transition: color 0.2s ease-in-out, -ms-transform 0.2s ease-in-out;
   transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
-  color: #A9B3C2;
+  color: #B3A79C;
   content: "\f078";
   position: absolute;
   right: 0;
 }
 #menu ul a.opener:hover:before, #menu ul span.opener:hover:before {
-  color: #FF8484;
+  color: #FFD552;
 }
 #menu ul a.opener.active + ul, #menu ul span.opener.active + ul {
   display: block;
@@ -3064,12 +3064,12 @@ button.sidebar-button {
   transform: rotate(-180deg);
 }
 #menu > ul > li {
-  border-top: solid 1px rgba(216, 224, 232, 0.75);
+  border-top: solid 1px rgba(217, 210, 201, 0.75);
   margin: 0.5em 0 0 0;
   padding: 0.5em 0 0 0;
 }
 #menu > ul > li > ul {
-  color: #A9B3C2;
+  color: #B3A79C;
   display: none;
   margin: 0.5em 0 1.5em 0;
   padding-left: 1em;
