images, smooth transitions

--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -36,7 +36,7 @@
 		text-decoration: none;
 
 		&:hover {
-			border-bottom-color: _palette(accent);
+			//border-bottom-color: _palette(accent);
 			color: _palette(accent) !important;
 
 			strong {
