--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -80,7 +80,8 @@ body {
 }
 
 @media screen and (max-width: 480px) {
-  html, body {
+  html,
+  body {
     min-width: 320px;
   }
 }
@@ -88,14 +89,22 @@ html {
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
 body {
   background: #2B2D3E;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
 }
-body.is-preload *, body.is-preload *:before, body.is-preload *:after, body.is-resizing *, body.is-resizing *:before, body.is-resizing *:after {
+body.is-preload *,
+body.is-preload *:before,
+body.is-preload *:after, body.is-resizing *,
+body.is-resizing *:before,
+body.is-resizing *:after {
   -moz-animation: none !important;
   -webkit-animation: none !important;
   -ms-animation: none !important;
@@ -104,6 +113,10 @@ body.is-preload *, body.is-preload *:before, body.is-preload *:after, body.is-re
   -webkit-transition: none !important;
   -ms-transition: none !important;
   transition: none !important;
+}
+
+body.fade-in {
+  opacity: 1;
 }
 
 /* Type */
@@ -140,7 +153,6 @@ a {
   text-decoration: none;
 }
 a:hover {
-  border-bottom-color: #FF8484;
   color: #FF8484 !important;
 }
 a:hover strong {
@@ -1438,7 +1450,7 @@ form {
   font-size: 0.9em;
   font-weight: 600;
   margin: 0;
-  text-align: right; /* Align label text to the right */
+  text-align: left;
   padding-right: 10px;
   display: flex;
   align-items: center;
@@ -1454,14 +1466,16 @@ form {
   background: #2B2D3E;
   border-radius: 0.375em;
   border: none;
-  border: solid 1px rgba(216, 224, 232, 0.75);
-  color: inherit;
+  border: solid 1px #D8E0E8;
+  color: #A9B3C2;
   display: block;
   outline: 0;
   padding: 0 10px; /* Reduce padding */
   text-decoration: none;
   width: 100%;
   height: 2.5em; /* Reduce height */
+  background-color: #44485D;
+  font-size: 0.8em;
 }
 .form-group input[type=text]:invalid,
 .form-group input[type=email]:invalid,
@@ -1478,16 +1492,16 @@ form {
 }
 .form-group textarea {
   padding: 0.5em 10px; /* Reduce padding */
-  height: 5em; /* Adjust height */
+  height: 10em; /* Adjust height */
   grid-column: 1/-1; /* Span both columns */
   resize: none; /* Prevent resizing */
+  background-color: #44485D;
 }
 
 .full-width {
   grid-column: 1/-1; /* Span both columns */
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 .full-width input[type=submit] {
   margin-top: 10px; /* Reduce margin */
@@ -1569,6 +1583,30 @@ input[type=submit]:active {
     width: 100%;
   }
 }
+.contact-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.contact-form {
+  flex: 1;
+  margin-right: 20px; /* Adjust the spacing between form and image */
+}
+
+.image-placeholder-container {
+  flex: 1;
+}
+
+@media (max-width: 768px) {
+  .contact-section {
+    flex-direction: column;
+  }
+  .contact-form {
+    margin-right: 0;
+    margin-bottom: 20px; /* Add spacing between form and image on mobile */
+  }
+}
 /* Box */
 .box {
   border-radius: 0.375em;
@@ -1620,13 +1658,13 @@ input[type=submit]:active {
 
 /* Image */
 .image {
-  border-radius: 0.375em;
-  border: 0;
+  border-radius: 0;
+  border: 6px solid #44485D;
   display: inline-block;
   position: relative;
 }
 .image img {
-  border-radius: 0.375em;
+  border-radius: 0;
   display: block;
 }
 .image.left, .image.right {
@@ -1661,6 +1699,45 @@ input[type=submit]:active {
 .image.main img {
   width: 100%;
 }
+.image.image-placeholder {
+  position: relative;
+  display: inline-block;
+}
+.image.image-placeholder img {
+  display: block;
+  width: 100%;
+  height: auto;
+  position: relative;
+}
+.image.image-placeholder::before, .image.image-placeholder::after {
+  content: "";
+  position: absolute;
+  border: 6px solid #FF8484;
+}
+.image.image-placeholder::before {
+  top: -6px;
+  left: -6px;
+  width: 25%;
+  height: 35%;
+  border-right: none;
+  border-bottom: none;
+}
+.image.image-placeholder::after {
+  bottom: -6px;
+  right: -6px;
+  width: 25%;
+  height: 35%;
+  border-left: none;
+  border-top: none;
+}
+.image.image-placeholder .image-caption {
+  font-variant: small-caps;
+  text-align: center;
+  margin-top: 0.5em;
+  font-size: 1em;
+  color: #A9B3C2;
+  margin: 0.5em;
+}
 
 a.image {
   overflow: hidden;
@@ -1676,6 +1753,24 @@ a.image:hover img {
   -webkit-transform: scale(1.075);
   -ms-transform: scale(1.075);
   transform: scale(1.075);
+}
+
+/* Image Placeholder Container */
+.image-placeholder-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 2em 0;
+}
+.image-placeholder-container .image-placeholder {
+  width: 90%;
+  background-color: #44485D;
+}
+@media screen and (min-width: 768px) {
+  .image-placeholder-container .image-placeholder {
+    width: 75%;
+  }
 }
 
 /* List */
@@ -2482,9 +2577,10 @@ button.sidebar-button {
   }
 }
 
+/* Adding blur to the background when the modal is active */
 .blur-background {
   filter: blur(8px);
-  pointer-events: none;
+  pointer-events: none; /* Disables interaction with the background */
 }
 
 .modal {
@@ -2493,24 +2589,31 @@ button.sidebar-button {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #2B2D3E;
-  border: 3px solid #FF8484;
-  border-radius: 15px;
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+  border: 3px solid #FF8484; /* Thicker, accent-colored border */
+  border-radius: 15px; /* Rounded corners */
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2); /* Deeper shadow for 3D effect */
   z-index: 10000;
-  display: none;
-  overflow: auto;
+  visibility: hidden; /* Initially hidden */
+  overflow: auto; /* Allows scrolling within the modal */
   width: 768px;
   max-width: 80%;
   height: auto;
   max-height: 80%;
   padding: 3em;
-  transition: all 0.3s ease;
+  opacity: 0; /* Initially fully transparent */
+  transition: opacity 0.6s ease, visibility 0.6s ease; /* Smooth transition for modal appearance */
 }
-.modal .modal-content {
+
+.modal.show {
+  visibility: visible; /* Make visible */
+  opacity: 1; /* Fully opaque */
+}
+
+.modal-content {
   padding: 3em;
   position: relative;
 }
-.modal .modal-content .close {
+.modal-content .close {
   position: absolute;
   top: 10px;
   right: 20px;
@@ -2518,57 +2621,57 @@ button.sidebar-button {
   font-weight: bold;
   cursor: pointer;
   color: #D8E0E8;
-  transition: color 0.3s ease;
+  transition: color 0.6s ease; /* Transition for hover effect */
 }
-.modal .modal-content .close:hover {
-  color: #FF8484;
+.modal-content .close:hover {
+  color: #FF8484; /* Change color on hover */
 }
-.modal .modal-content .large-image {
+.modal-content .large-image {
   width: 100%;
   height: auto;
   display: block;
   margin-bottom: 2em;
-  border-radius: 10px;
+  border-radius: 10px; /* Rounded corners for images */
 }
-.modal .modal-content .price {
+.modal-content .price {
   text-transform: uppercase;
   font-size: 1.25em;
-  color: #FF8484;
+  color: #FF8484; /* Use accent color for price */
   font-weight: bold;
   padding-top: 1em;
 }
-.modal .modal-content .carousel {
+.modal-content .carousel {
   display: flex;
   overflow-x: auto;
-  overflow-y: hidden;
-  scrollbar-width: thick;
-  scrollbar-color: #FF8484 #2B2D3E;
+  overflow-y: hidden; /* Ensures no vertical scrollbar */
+  scrollbar-width: thick; /* For Firefox */
+  scrollbar-color: #FF8484 #2B2D3E; /* For Firefox */
   margin-bottom: 2em;
-  padding: 10px 0;
+  padding: 10px 0; /* Padding to ensure scrollbar does not overlap images */
   position: relative;
 }
-.modal .modal-content .carousel::-webkit-scrollbar {
-  height: 8px;
-  background: #2B2D3E;
+.modal-content .carousel::-webkit-scrollbar {
+  height: 8px; /* Height of the horizontal scrollbar */
+  background: #2B2D3E; /* Background of the scrollbar track */
 }
-.modal .modal-content .carousel::-webkit-scrollbar-thumb {
-  background-color: #FF8484;
-  border-radius: 10px;
-  border: 2px solid #2B2D3E;
+.modal-content .carousel::-webkit-scrollbar-thumb {
+  background-color: #FF8484; /* Color of the scrollbar thumb */
+  border-radius: 10px; /* Rounded corners for the scrollbar thumb */
+  border: 2px solid #2B2D3E; /* Creates some padding around the thumb */
 }
-.modal .modal-content .carousel .carousel-image {
+.modal-content .carousel .carousel-image {
   max-width: 100px;
   margin-right: 10px;
   cursor: pointer;
-  border-radius: 8px;
+  border-radius: 8px; /* Rounded corners for carousel images */
 }
-.modal .modal-content .carousel .carousel-image:last-child {
+.modal-content .carousel .carousel-image:last-child {
   margin-right: 0;
 }
-.modal .modal-content .carousel .carousel-image:hover {
-  opacity: 0.8;
+.modal-content .carousel .carousel-image:hover {
+  opacity: 0.8; /* Slight dim effect on hover */
 }
-.modal .modal-content p {
+.modal-content p {
   color: #D8E0E8;
   font-family: "Work Sans", sans-serif;
 }
@@ -2582,8 +2685,8 @@ button.sidebar-button {
     top: 0;
     left: 0;
     transform: none;
-    padding: 0;
-    border-radius: 0;
+    padding: 0; /* Remove padding to use full screen space */
+    border-radius: 0; /* Remove border radius for full-screen modal */
   }
 }
 /* Sidebar */
