--- a/assets/sass/base/_page.scss
+++ b/assets/sass/base/_page.scss
@@ -6,43 +6,53 @@
 
 /* Basic */
 
-	// MSIE: Required for IEMobile.
-		@-ms-viewport {
-			width: device-width;
-		}
+// MSIE: Required for IEMobile.
+@-ms-viewport {
+  width: device-width;
+}
 
-	// MSIE: Prevents scrollbar from overlapping content.
-		body {
-			-ms-overflow-style: scrollbar;
-		}
+// MSIE: Prevents scrollbar from overlapping content.
+body {
+  -ms-overflow-style: scrollbar;
+}
 
-	// Ensures page width is always >=320px.
-		@include breakpoint('<=xsmall') {
-			html, body {
-				min-width: 320px;
-			}
-		}
+// Ensures page width is always >=320px.
+@include breakpoint("<=xsmall") {
+  html,
+  body {
+    min-width: 320px;
+  }
+}
 
-	// Set box model to border-box.
-	// Based on css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice
-		html {
-			box-sizing: border-box;
-		}
+// Set box model to border-box.
+// Based on css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice
+html {
+  box-sizing: border-box;
+}
 
-		*, *:before, *:after {
-			box-sizing: inherit;
-		}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
 
-	body {
-		background: _palette(bg);
+body {
+  background: _palette(bg);
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
 
-		// Stops initial animations until page loads or stops resizing.
-			&.is-preload,
-			&.is-resizing {
-				*, *:before, *:after {
-					@include vendor('animation', 'none !important');
-					@include vendor('transition', 'none !important');
-				}
-			}
+  // Stops initial animations until page loads or stops resizing.
+  &.is-preload,
+  &.is-resizing {
+    *,
+    *:before,
+    *:after {
+      @include vendor("animation", "none !important");
+      @include vendor("transition", "none !important");
+    }
+  }
+}
 
-	}
+body.fade-in {
+  opacity: 1;
+}
