--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,14 @@
+/*$palette: (
+  bg: #2B2D3E,
+  bg-alt: #44485D,
+  fg: #D8E0E8,
+  fg-bold: #FF6B6B,
+  fg-light: #A9B3C2,
+  border: rgba(216, 224, 232, 0.75),
+  border-bg: transparentize(#D8E0E8, 0.75),
+  accent: #FF8484,
+  secondary-accent: #FFABAB
+);*/
 @import 'fontawesome-all.min.css';
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic,600italic|Roboto+Slab:400,700");
 /*
@@ -121,25 +132,25 @@ body.fade-in {
 
 /* Type */
 body, input, select, textarea {
-  color: #D8E0E8;
+  color: #B0B8C5;
   font-family: "Work Sans", sans-serif;
-  font-size: 13pt;
+  font-size: 14pt;
   font-weight: 400;
   line-height: 1.65;
 }
 @media screen and (max-width: 1680px) {
   body, input, select, textarea {
-    font-size: 11pt;
+    font-size: 12pt;
   }
 }
 @media screen and (max-width: 1280px) {
   body, input, select, textarea {
-    font-size: 10pt;
+    font-size: 11pt;
   }
 }
 @media screen and (max-width: 360px) {
   body, input, select, textarea {
-    font-size: 9pt;
+    font-size: 10pt;
   }
 }
 
@@ -153,14 +164,14 @@ a {
   text-decoration: none;
 }
 a:hover {
-  color: #FF8484 !important;
+  color: #3CCDC6 !important;
 }
 a:hover strong {
   color: inherit;
 }
 
 strong, b {
-  color: #FF6B6B;
+  color: #3CCDC6;
   font-weight: 600;
 }
 
@@ -187,7 +198,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 }
 
 h1 {
-  font-size: 4em;
+  font-size: 3em;
   margin: 0 0 0.5em 0;
   line-height: 1.3;
 }
@@ -244,16 +255,16 @@ sup {
 }
 
 blockquote {
-  border-left: solid 3px rgba(216, 224, 232, 0.75);
+  border-left: solid 3px rgba(176, 184, 197, 0.75);
   font-style: italic;
   margin: 0 0 2em 0;
   padding: 0.5em 0 0.5em 2em;
 }
 
 code {
-  background: rgba(216, 224, 232, 0.25);
+  background: rgba(176, 184, 197, 0.25);
   border-radius: 0.375em;
-  border: solid 1px rgba(216, 224, 232, 0.75);
+  border: solid 1px rgba(176, 184, 197, 0.75);
   font-family: "Fira Code", monospace;
   font-size: 0.9em;
   margin: 0 0.25em;
@@ -275,7 +286,7 @@ pre code {
 
 hr {
   border: 0;
-  border-bottom: solid 1px rgba(216, 224, 232, 0.75);
+  border-bottom: solid 1px rgba(176, 184, 197, 0.75);
   margin: 2em 0;
 }
 hr.major {
@@ -1466,8 +1477,8 @@ form {
   background: #2B2D3E;
   border-radius: 0.375em;
   border: none;
-  border: solid 1px #D8E0E8;
-  color: #A9B3C2;
+  border: solid 1px #B0B8C5;
+  color: #8C97A3;
   display: block;
   outline: 0;
   padding: 0 10px; /* Reduce padding */
@@ -1538,22 +1549,22 @@ input[type=submit]:active {
 
 /* Adjust placeholders */
 ::-webkit-input-placeholder {
-  color: #A9B3C2 !important;
+  color: #8C97A3 !important;
   opacity: 1;
 }
 
 :-moz-placeholder {
-  color: #A9B3C2 !important;
+  color: #8C97A3 !important;
   opacity: 1;
 }
 
 ::-moz-placeholder {
-  color: #A9B3C2 !important;
+  color: #8C97A3 !important;
   opacity: 1;
 }
 
 :-ms-input-placeholder {
-  color: #A9B3C2 !important;
+  color: #8C97A3 !important;
   opacity: 1;
 }
 
@@ -1610,7 +1621,7 @@ input[type=submit]:active {
 /* Box */
 .box {
   border-radius: 0.375em;
-  border: solid 1px rgba(216, 224, 232, 0.75);
+  border: solid 1px rgba(176, 184, 197, 0.75);
   margin-bottom: 2em;
   padding: 1.5em;
 }
@@ -1734,8 +1745,8 @@ input[type=submit]:active {
   font-variant: small-caps;
   text-align: center;
   margin-top: 0.5em;
-  font-size: 1em;
-  color: #A9B3C2;
+  font-size: 1.2em;
+  color: #8C97A3;
   margin: 0.5em;
 }
 
@@ -1796,7 +1807,7 @@ ul.alt {
   padding-left: 0;
 }
 ul.alt li {
-  border-top: solid 1px rgba(216, 224, 232, 0.75);
+  border-top: solid 1px rgba(176, 184, 197, 0.75);
   padding: 0.5em 0;
 }
 ul.alt li:first-child {
@@ -1903,7 +1914,7 @@ ul.contact {
 }
 ul.contact li {
   text-decoration: none;
-  border-top: solid 1px rgba(216, 224, 232, 0.75);
+  border-top: solid 1px rgba(176, 184, 197, 0.75);
   margin: 1.5em 0 0 0;
   padding: 1.5em 0 0 3em;
   position: relative;
@@ -2008,12 +2019,12 @@ table {
   width: 100%;
 }
 table tbody tr {
-  border: solid 1px rgba(216, 224, 232, 0.75);
+  border: solid 1px rgba(176, 184, 197, 0.75);
   border-left: 0;
   border-right: 0;
 }
 table tbody tr:nth-child(2n+1) {
-  background-color: rgba(216, 224, 232, 0.25);
+  background-color: rgba(176, 184, 197, 0.25);
 }
 table td {
   padding: 0.75em 0.75em;
@@ -2026,16 +2037,16 @@ table th {
   text-align: left;
 }
 table thead {
-  border-bottom: solid 2px rgba(216, 224, 232, 0.75);
+  border-bottom: solid 2px rgba(176, 184, 197, 0.75);
 }
 table tfoot {
-  border-top: solid 2px rgba(216, 224, 232, 0.75);
+  border-top: solid 2px rgba(176, 184, 197, 0.75);
 }
 table.alt {
   border-collapse: separate;
 }
 table.alt tbody tr td {
-  border: solid 1px rgba(216, 224, 232, 0.75);
+  border: solid 1px rgba(176, 184, 197, 0.75);
   border-left-width: 0;
   border-top-width: 0;
 }
@@ -2092,8 +2103,10 @@ input[type=reset]:hover,
 input[type=button]:hover,
 button:hover,
 .button:hover {
-  background-color: #FF8484;
+  background-color: #3CCDC6;
   color: #2B2D3E !important;
+  box-shadow: none;
+  transition: 0.6s ease-in-out, color 0.6s ease-in-out;
 }
 input[type=submit]:active,
 input[type=reset]:active,
@@ -2200,7 +2213,7 @@ button.sidebar-button {
 
 /* Mini Posts */
 .mini-posts article {
-  border-top: solid 1px rgba(216, 224, 232, 0.75);
+  border-top: solid 1px rgba(176, 184, 197, 0.75);
   margin-top: 2em;
   padding-top: 2em;
 }
@@ -2281,7 +2294,7 @@ button.sidebar-button {
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
   border-radius: 0.25rem;
-  border: solid 2px rgba(216, 224, 232, 0.75);
+  border: solid 2px rgba(176, 184, 197, 0.75);
   content: "";
   display: block;
   height: 7em;
@@ -2399,7 +2412,7 @@ button.sidebar-button {
   width: calc(33.3333333333% - 6em);
 }
 .posts article:before {
-  background: rgba(216, 224, 232, 0.75);
+  background: rgba(176, 184, 197, 0.75);
   content: "";
   display: block;
   height: calc(100% + 6em);
@@ -2409,7 +2422,7 @@ button.sidebar-button {
   width: 1px;
 }
 .posts article:after {
-  background: rgba(216, 224, 232, 0.75);
+  background: rgba(176, 184, 197, 0.75);
   bottom: -3em;
   content: "";
   display: block;
@@ -2547,7 +2560,7 @@ button.sidebar-button {
 }
 #main > .inner > section {
   padding: 6em 0 4em 0;
-  border-top: solid 2px rgba(216, 224, 232, 0.75);
+  border-top: solid 2px rgba(176, 184, 197, 0.75);
 }
 #main > .inner > section:first-of-type {
   border-top: 0 !important;
@@ -2620,7 +2633,7 @@ button.sidebar-button {
   font-size: 24px;
   font-weight: bold;
   cursor: pointer;
-  color: #D8E0E8;
+  color: #B0B8C5;
   transition: color 0.6s ease; /* Transition for hover effect */
 }
 .modal-content .close:hover {
@@ -2672,7 +2685,7 @@ button.sidebar-button {
   opacity: 0.8; /* Slight dim effect on hover */
 }
 .modal-content p {
-  color: #D8E0E8;
+  color: #B0B8C5;
   font-family: "Work Sans", sans-serif;
 }
 
@@ -2711,7 +2724,7 @@ button.sidebar-button {
   -webkit-transform: scaleX(-1);
   -ms-transform: scaleX(-1);
   transform: scaleX(-1);
-  color: #D8E0E8;
+  color: #B0B8C5;
   content: "\f002";
   cursor: default;
   display: block;
@@ -2756,7 +2769,7 @@ button.sidebar-button {
   width: 26em;
 }
 #sidebar > .inner > * {
-  border-bottom: solid 2px rgba(216, 224, 232, 0.75);
+  border-bottom: solid 2px rgba(176, 184, 197, 0.75);
   margin: 0 0 3.5em 0;
   padding: 0 0 3.5em 0;
 }
@@ -2796,7 +2809,7 @@ button.sidebar-button {
   top: 0;
   width: 6em;
   z-index: 10000;
-  color: #D8E0E8;
+  color: #B0B8C5;
 }
 #sidebar .toggle:before {
   -moz-osx-font-smoothing: grayscale;
@@ -2897,7 +2910,7 @@ button.sidebar-button {
   #sidebar .toggle {
     text-indent: 7.25em;
     width: 7.25em;
-    color: #D8E0E8;
+    color: #B0B8C5;
   }
   #sidebar .toggle:before {
     margin-left: -0.0625em;
@@ -3067,7 +3080,7 @@ button.sidebar-button {
 
 /* Footer */
 #footer .copyright {
-  color: #A9B3C2;
+  color: #8C97A3;
   font-size: 0.9em;
 }
 #footer .copyright a {
@@ -3126,7 +3139,7 @@ button.sidebar-button {
   -webkit-transition: color 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
   -ms-transition: color 0.2s ease-in-out, -ms-transform 0.2s ease-in-out;
   transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
-  color: #A9B3C2;
+  color: #8C97A3;
   content: "\f078";
   position: absolute;
   right: 0;
@@ -3144,12 +3157,12 @@ button.sidebar-button {
   transform: rotate(-180deg);
 }
 #menu > ul > li {
-  border-top: solid 1px rgba(216, 224, 232, 0.75);
+  border-top: solid 1px rgba(176, 184, 197, 0.75);
   margin: 0.5em 0 0 0;
   padding: 0.5em 0 0 0;
 }
 #menu > ul > li > ul {
-  color: #A9B3C2;
+  color: #8C97A3;
   display: none;
   margin: 0.5em 0 1.5em 0;
   padding-left: 1em;
