--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -32,8 +32,11 @@ button,
 	margin-right: 0.5em;
 
 	&:hover {
-		background-color: _palette(accent);
+		background-color: _palette(tertiary-accent);
 		color: _palette(bg) !important;
+		box-shadow: none;
+		transition: 0.6s ease-in-out, color 0.6s ease-in-out;
+
 	}
 
 	&:active {
