--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -48,16 +48,20 @@
 		}
 	}
 
-	&::after {
-		content: '';
-		position: absolute;
-		bottom: -5px; // Align with the bottom of the header
-		left: 50%;
-		width: 0;
-		height: 5px;
-		background-color: _palette(accent); // Accent color for the border
-		animation: growBorder2 3s ease-out forwards;
-	}
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: -5px;
+        left: 50%;
+        width: 0;
+        height: 5px;
+        background-color: _palette(accent);
+        animation: growBorder2 3s ease-out forwards;
+        animation-fill-mode: forwards; // Ensures styles remain as they are at the end of the animation
+        visibility: visible; // Ensure that it does not toggle visibility
+		will-change: transform; // Optimizes performance, hinting to the browser the element will transform
+        transform: translateZ(0); // Promotes layering in GPU, can improve performance and prevent re-animation
+    }
 }
 
 @keyframes growBorder2 {
